# 3DRenderapp

./: README.md
.claude/: settings.json
.github/workflows/: build-mac.yml  deploy-pages.yml
assets/icons/: _icons.js  gen_icons.py  preview.html
docs/: BILLING_AND_MANAGED_KEYS.md  COMMERCIALIZATION.md  COMPETITOR_UPDATE_2026-07.md  HANDOFF.md  MARKET_RESEARCH.md  NAMING.md  NOTES_PREVIEW_ENGINE.md  PLAN.md  POSITIONING.md  RESEARCH.md  SOCIAL_LOGIN.md  WIREFRAMES.md
docs/inspiration/: INSPIRATION.md
docs/wireframes/: wireframe-sheet.html
harness/: .gitignore  README.md  app-shots.mjs  automode-e2e.mjs  boot-e2e.mjs  canvas-clean.mjs  canvas-shot.mjs  canvas-shots.mjs  color3mf-e2e.mjs  context-e2e.mjs  cost-e2e.mjs  dims-e2e.mjs  dims-probe2.mjs  e2e.mjs  engine-audit.mjs  export-e2e.mjs  facepaint-3mf-e2e.mjs  fit-e2e.mjs  flashfix-e2e.mjs  gen-icons.mjs  gen-thumbs.mjs  hf-fallback-e2e.mjs  hint-probe.mjs  hole-e2e.mjs  house-e2e.mjs  ipad-audit.mjs  lib.mjs  library-bulk-e2e.mjs  library-organize-e2e.mjs  library-thumbs-e2e.mjs  local-debug.mjs  local-e2e.mjs  mark-e2e.mjs  measure2-e2e.mjs  package.json  plates-e2e.mjs  precision-e2e.mjs  preview-e2e.mjs  printpack2-e2e.mjs  printprep-e2e.mjs  (+15 more)
moldable-lite/: README.md  _login_check.mjs  index.html  landing.html  package-lock.json  package.json  vite.config.ts
moldable-lite/src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
moldable-lite/src-tauri/capabilities/: default.json
moldable-lite/src-tauri/icons/: icon.icns
moldable-lite/src-tauri/src/: lib.rs  main.rs
(+72 files in other folders)
