[package]
name = "moldable"
version = "0.2.0"
description = "Moldable — AI 3D design for printing"
authors = ["Graphicaljerry"]
edition = "2021"

# The library the desktop (and future mobile) entry points call into.
[lib]
name = "moldable_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
